Fix shifted columns and add an example for it; more examples to follow

--- a/css/examples.css
+++ b/css/examples.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 10px;
   padding: 0;
   font-family: monospace, sans-serif;
   font-size: 62.5%; /* 10px */
@@ -78,7 +78,6 @@ ul {
 }
 
 #wrapper {
-  margin: 10px;
   font-size: 1.2em;
   line-height: 1.6em;
   background-color: #fff;
